--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,1 +1,73 @@
 /* BASIC STYLES HERE */
+
+body {
+    background-image: url(https://www.bing.com/th/id/OGC.dc6451bc1b9766fa0a6e8dced8fbb6e4?pid=1.7&rurl=https%3a%2f%2fbestanimations.com%2fNature%2fwinter%2fwinter-snow-nature-animated-gif-30.gif&ehk=bGHeqjLjP6NTo4QM2dwZJshTUNKfkPaManJKAM%2bAQo4%3d);
+    background-position: center;
+    background-size: cover;
+
+
+}
+
+
+
+.decoration {
+    background-image: url(https://plus.unsplash.com/premium_photo-1667896347846-b60469efdd07?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzd8fGNocmlzdG1hcyUyMGRlY29yYXRpb25zfGVufDB8fDB8fHww);
+    background-position: center;
+    background-size: cover;
+
+}
+
+.note-Decoration {
+    background-image: url(https://images.unsplash.com/photo-1513538318453-d0cc70acc86d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fHNpbXBsZSUyMGNocmlzdG1hcyUyMGRlY29yYXRpb258ZW58MHx8MHx8fDI%3D);
+    background-position: center;
+    background-size: cover;
+    min-height: 20dvh;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* #color-wheel {
+    width: 0;
+    height: 0;
+    border-left: 25px solid transparent;
+    border-right: 25px solid transparent;
+    border-bottom: 50px rgb(94, 48, 48);
+    position: relative;
+}
+
+#color-wheel::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 100px solid transparent;
+    border-right: 100px solid transparent;
+    border-bottom: 200px solid yellow;
+    transform: rotate(120deg);
+}
+
+#color-wheel::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 100px solid transparent;
+    border-right: 100px solid transparent;
+    border-bottom: 200px solid blue;
+    transform: rotate(240deg);
+} */
